patch warning